syntax = "proto3";

import "google/protobuf/timestamp.proto";

package v2.sys_core.services;

option go_package = "github.com/amplify-cms/sys-share/sys-core/service/go/rpc/v2";

message SingleRestoreResult {
  string result = 1;
}

message SingleRestoreRequest {
  string backupFile = 1;
}

message SingleBackupResult {
  string backupFile = 1;
}

message RestoreAllRequest {
	string restore_version = 1;
	map<string,string> backup_files = 2;
}

message RestoreAllResult {
	repeated SingleRestoreResult restore_results = 1;
}

message BackupAllResult {
	string version = 1;
	repeated SingleBackupResult backup_files = 2;
}

message ListBackupRequest {
	string backup_version = 1;
}

message ListBackupResult {
  repeated BackupAllResult backup_versions = 1;
}

// This will be replaced by NATS in the future
message EventRequest {
  string eventName = 1;
  string initiator = 2;
  string userId = 3;
  bytes jsonPayload = 4;
}

message EventResponse {
  // will return a json / msgpack encoded as string
  bytes reply = 1;
}

message EmailRequest {
  string sender = 1;
  string subject = 2;
  map<string, string> recipients = 3;
  bytes content = 4;
  repeated string cc = 5;
  repeated string bcc = 6;
  repeated bytes attachments = 7;
  string sender_name = 8;
}

message EmailResponse {
  bool success = 1;
  string err_message = 2;
  string success_message = 3;
}

message FileUploadRequest {
  FileInfo file_info = 1;
  bytes chunk = 2;
}

message FileInfo {
  string mime_type = 1;
  bool is_dir = 2;
  string resource_id = 3;
}

message FileUploadResponse {
  bool success = 1;
  string id = 2;
  string error_msg = 3;
  string resource_id = 4;
}

message FileDownloadRequest {
  string id = 1;
}

message FileDownloadResponse {
  bytes chunk = 1;
  bool success = 2;
  string error_msg = 3;
  int64 total_size = 4;
  bool is_compressed = 5;
}

message GeoLoc {
  float longitude = 1;
  float latitude = 2;
}

message Meta {
  string actor = 1;
  string user_id = 2; // name or id
  string user_name = 3;
  google.protobuf.Timestamp datetime = 4;
  GeoLoc geo = 5;
  string org_id = 6;
  string org_name = 7;
  string project_id = 8;
  string project_name = 9;
}

message ModEvent {
  string id = 1;
  Meta meta = 2;
  string event_type = 3;
  bytes payload = 4;
  // string / json / proto / msgpack / whichever
  string payload_encoding = 5;
}

enum TimeSegment {
  INVALID = 0;
  HOUR = 1;
  DAY = 2;
}

message AggMeta {
  TimeSegment time_segment = 1;
  google.protobuf.Timestamp datetime_start = 2;
  google.protobuf.Timestamp datetime_end = 3;
}

message AggModEvent {
  string id = 1;
  AggMeta agg_meta = 2;
  repeated Meta event_metas = 3; // aggregation of metadata from the events it collects
  string event_type = 4;
  bytes payload = 5; // merged json or string
  int64 count = 6;
}

message DownloadAnalyticsRequest {
  string id = 1;
  bytes filter = 2;
  google.protobuf.Timestamp datetime_start = 3;
  google.protobuf.Timestamp datetime_end = 4;
}

message DownloadAnalyticsResponse {
  bytes analytics_bytes = 1; // when you want the raw data (json / msgpack / proto)
  string analytics_url = 2; // when you want the url uploaded to sheets as json / csv
  string analytics_file = 3; // when you want the file in json / csv format for example
}
